Documenting the Rest API.
